Initial testing in build.